2012-01-25 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-iexporter.h: Fix typo.

	* m4/na-enable-manuals.m4: Remove ENABLE_MANUALS conditional.

	* docs/nact/Makefile.am: Another rewriting.
	Install and distribute manuals even if not just built.
	Fix part of #668181.

	* run-distcheck.sh: Deletes the remaining part of an aborded build.

2012-01-23 Pierre Wieser <pwieser@trychlos.org>

	* run-autogen.sh: Deletes the remaining part of an aborded build.

2012-01-22 Pierre Wieser <pwieser@trychlos.org>

	* docs/reference/Makefile.am: Reference the na-core library.

	Fix part of #668181 reported by Vincent Untz.

2012-01-18 Pierre Wieser <pwieser@trychlos.org>

	* docs/nact/C/nact-conditions.xml: Does not embed a <literal> tag inside
	of a <guilabel> one.

	* src/core/na-desktop-environment.c
	(na_desktop_environment_detect_running_desktop): Detect XFCE desktop.

2012-01-17 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-object-item-factory.c: Reset provider as copyable.

	* src/core/na-factory-object.c (na_factory_object_copy):
	Takes care of not overriding target provider data.

	nact_match_list functions connect to base signals (and acts as a
	pseudo-interface).

	* src/nact/nact-match-list.c:
	* src/nact/nact-match-list.h
	(nact_match_list_create_model): Renamed as nact_match_list_init_with_args().
	(nact_match_list_init_view, nact_match_list_on_selection_changed,
	nact_match_list_dispose): Removed functions.

	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-icapabilities-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-imimetypes-tab.c:
	* src/nact/nact-ischemes-tab.c:
	* src/nact/nact-main-tab.h: Updated accordingly.

	* src/core/na-pivot.c:
	* src/core/na-settings.h:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-main-toolbar.c:
	* src/nact/nact-main-window.c:
	* src/nact/nact-menubar-edit.c:
	* src/nact/nact-providers-list.c: